# ecs-test

./: CMakeLists.txt  README.md  imgui.ini
assets/shaders/: framebuffer.frag  framebuffer.vert  shader.frag  shader.vert
assets/textures/: icon.xcf
src/: framebuffer.cpp  framebuffer.hpp  main.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/glad/: gl.h
src/imgui/: imgui_impl_sdl2.cpp
